--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y libx11-dev pkg-config
+
+    - name: Setup Rust
+      uses: actions/setup-rust@v1
+      with:
+        rust-version: stable
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
