--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,4 @@
-name: Rust CI
+name: Rust
 
 on:
   push:
@@ -18,11 +18,6 @@ jobs:
 
       - name: Install dependencies
         run: sudo apt-get update && sudo apt-get install -y libx11-dev pkg-config
-
-      - name: Setup Rust
-        uses: actions/setup-rust@v1
-        with:
-          rust-version: stable
 
       - name: Build
         run: cargo build --verbose
