--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "human_os"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2024"
 
 [dependencies]
-x11rb = "0.13.2"
 once_cell = "1.21.3"
 rdev = "0.4.6"
 
 [profile.release]
-lto = true       # link-time optimization
-codegen-units = 1
-opt-level = "z"  # smallest size
-panic = "abort"  # remove stack unwinding
+opt-level = "z"        # optimize for size (or "s")
+lto = true             # link-time optimization
+codegen-units = 1      # better optimization
+strip = true           # strip symbols
+panic = "abort"        # removes unwinding machinery
