Working on GitHub Actions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,6 @@
 name: Rust
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -13,14 +9,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install system dependencies
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y libx11-dev libxi-dev pkg-config
+          sudo apt-get install -y libx11-dev libxtst-dev pkg-config
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Build
         run: cargo build --verbose
-
-      - name: Test
-        run: cargo test --verbose
-
